setup/config/namespace-template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: NSNAME
